<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#FFFFFF">
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:hint="@string/in1"/>
    <RadioGroup
            android:layout_width="197dp"
            android:orientation="horizontal"
            android:layout_height="50dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/input1"
            android:id="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
    >
        <RadioButton
                android:text="@string/r1"
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/radioButton6" android:clickable="false"
                android:checked="false"/>
        <RadioButton
                android:text="@string/r2"
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/radioButton" android:clickable="false"/>
        <RadioButton
                android:text="@string/r3"
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/radioButton7" android:clickable="false"/>
        <RadioButton
                android:text="@string/r4"
                android:layout_width="50dp"
                android:layout_height="50dp" android:id="@+id/radioButton8" android:clickable="false"/>
    </RadioGroup>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/input2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/in2"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="50dp" android:id="@+id/button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input2"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:onClick="berechnen" android:text="@string/berechnen"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp" android:id="@+id/button2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input2"
            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" style="@style/Widget.AppCompat.Button" android:textColor="#F44336"
            android:onClick="speichern" android:text="@string/ms"/>
    <Button
            android:text="@string/mr"
            android:layout_width="50dp"
            android:layout_height="50dp" android:id="@+id/button3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input2" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="lesen"/>
    <TextView
            android:text="@string/out"
            android:layout_width="140dp"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp" app:layout_constraintEnd_toEndOf="@+id/button" android:textSize="24sp"
            android:gravity="right" android:textColor="#FFFFFF" android:alpha="255" android:background="#3F51B5"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.1"/>
</androidx.constraintlayout.widget.ConstraintLayout>